[package]
name = "cybex-ecc"
version = "0.1.0"
authors = ["ldwformat <ldwformat@gmail.com>"]
edition = '2018'

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
aes_frast = "0.1.2"
libsecp256k1 = "0.2.1"
hmac-drbg = "0.1.0"
typenum = "1.10.0"
arrayref = "0.3.5"
digest = "0.6.0"
sha2 = "0.6.0"
ripemd160 = "0.8.0"
bigint = "4.4.1"
base58 = "0.1.0"
hex_d_hex = "1.0.1"
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }
rustc-serialize = { version = "0.3.24", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
